@@ -1,7 +1,14 @@
+Mon Jun 28 16:26:00 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * modules/WorkspaceCreator.pm:
+
+          Bug fix where the negated types in excludes () were not
+          handled correctly.
+          
 Mon Jun 28 05:55:54 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * templates/wix.mpd:
-        
+
           The Id attribute for the exename/sharedname was not normalized.
 
 Mon Jun 28 05:42:48 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
